Issue #611: Made it possible to configure the name of query parameters that should be converted to header key-value pairs. * Extracted exception handling from `RootRoute` to `RootRouteExceptionHandler`. * Extracted building of DittoHeaders from `RootRoute` to `RootRouteHeadersStepBuilder`. * Consequently use `JsonSchemaVersion` instead of int for schema version parameters.
Signed-off-by: Juergen Fickel <juergen.fickel@bosch-si.com>